--- a/index.html
+++ b/index.html
@@ -5,42 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>template</title>
+	<title>Simmons-O-Matic</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 	<main>
-		<div id = 'display-buttons'></div>
+		<div class = "container">
+			<div class = "row">
+				<div class = "panel panel-default menu-area">
+					<h1>Simmons-O-Matic</h1>
+				</div>
+			</div>
 
-		<div id = 'display-gifs'></div>
+			<div class = "row">
+				<div id = 'display-buttons'></div>
+				<br />
+			</div>
+
+			<div class = "row">
+				<label>Enter your favorite Simmons here:</label>
+				<input id = "user-input" type="text"></input>
+				<button id ="user-submit">Submit</button>
+			</div>
 
 
-		
+			<div class = "row panel">
+				<div id = 'display-gifs'></div>
+			</div>			
+		</div>	
 	</main>
 
-	
-
-
 	<!-- Latest compiled and minified JavaScript -->
+	<!-- JQuery -->
 	<script
 		src="http://code.jquery.com/jquery-3.2.1.js"
 		integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
 		crossorigin="anonymous"></script>
 		
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script 
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
+		crossorigin="anonymous"></script>
 
-	<!-- JQuery -->
-
-	
-	<script type="text/javascript" src = 'assets/javascript/app.js'></script>
-
-
-
-
-
+	<script type="text/javascript" 
+		src = 'assets/javascript/app.js'></script>
 </body>
 </html>
