--- a/index.html
+++ b/index.html
@@ -8,31 +8,39 @@
 	<title>Simmons-O-Matic</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+
 </head>
 
 <body>
 	<main>
 		<div class = "container">
 			<div class = "row">
-				<div class = "panel panel-default menu-area">
+				<div class = "panel panel-default header-panel">
 					<h1>Simmons-O-Matic</h1>
+					<h6>I made this page because Richard Simmons GIFs make me laugh, but there are other cool people named Simmons too. <br />
+					*Gene Simmons is not cool, he is a jerk. <br />
+					**Jemma Simmons is a fictional character, but I included her anyway because I got tired of looking at GIFs of old dudes.
+					</h6>
 				</div>
 			</div>
 
-			<div class = "row">
-				<div id = 'display-buttons'></div>
-				<br />
-			</div>
+			<div id = "menu-area">
+				<div class = "row">
+					<div id = 'display-buttons'></div>
+					<br />
+				</div>
 
-			<div class = "row">
-				<label>Enter your favorite Simmons here:</label>
-				<input id = "user-input" type="text"></input>
-				<button id ="user-submit">Submit</button>
+				<div class = "row">
+					<label>Enter your favorite Simmons here:</label>
+					<input id = "user-input" type="text"></input>
+					<button id ="user-submit">Submit</button>
+				</div>
 			</div>
-
 
 			<div class = "row panel">
 				<div id = 'display-gifs'></div>
