Added line break

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<h1>Simmons-O-Matic</h1>
 					<h6>I made this page because Richard Simmons GIFs make me laugh, but there are other cool people named Simmons too. <br />
 					*Gene Simmons is not cool, he is a jerk. <br />
-					**Russell Simmons is also a jerk, and his GIFs are not that impressive either
+					**Russell Simmons is also a jerk, and his GIFs are not that impressive either<br />
 					***Jemma Simmons is a fictional character, but I included her anyway because I got tired of looking at GIFs of old dudes.
 					</h6>
 				</div>
